--- a/grafanaConfig.example/go-carbon/storage-schemas.conf
+++ b/grafanaConfig.example/go-carbon/storage-schemas.conf
@@ -3,25 +3,9 @@
 #
 # compressed if specified, will overwrite the value set in go-carbon.conf.
 
-# Screeps UserTracker
-[screepsUserTracker_User_Info]
-pattern = ^screeps\.userTracker\..*\.users\..*\.info.*
-retentions = 5m:1d,1h:150d
-compressed = false
-
-[screepsUserTracker_User_Stats]
-pattern = ^screeps\.userTracker\..*\.users\..*\.stats.*
-retentions = 15m:7d,1h:30d,1d:150d
-compressed = false
-
-[screepsUserTracker_TicksOrStatus]
-pattern = ^screeps\.userTracker\..*\.(ticks|status).*
-retentions = 5m:1d,1h:150d
-compressed = false
-
-[screepsUserTracker]
-pattern = ^screeps\.userTracker\..*\.*
-retentions = 1h:30d,1d:150d
+[statsGetter]
+pattern = ^screeps.*
+retentions = 1s:1h,15m:1d,1d:1y
 compressed = false
 
 [stats]
@@ -31,7 +15,7 @@ compressed = false
 
 [default]
 pattern = .*
-retentions = 1h:30d
+retentions = 60s:30d
 compressed = false
 
 # Partialy enable or disable online config migration for the matched metrics;
